--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": true,
   "source": "src/index.ts",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "parcel": "^2.9.2"   
+    "parcel": "^2.9.2"
   },
   "scripts": {
     "start": "parcel src/index.html",
     "watch": "parcel watch",
-    "build": "rm -rf ./dist && parcel build --log-level error"
+    "build": "rm -rf ./build && parcel build --log-level error",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": []
   },
+  "homepage": "https://nickwelp.github.io/smartsweepersjs",
   "browserslist": {
     "production": [
       ">0.2%",
